# SegQC

./: README.md  pyproject.toml  requirements.txt
src/SegQC/: SegMask.py  SpaDa.py  Stains.py  Transcripts.py  constants.py  sqc.py
src/SegQC/plotting/: segmentation_plots.py  stain_plots.py  table_plots.py  transcript_plots.py
tests/: UCI5223A9_test.ipynb
